# mbed-edge

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.debian.byoc  Dockerfile.debian.dev  Dockerfile.debian.prod  Dockerfile.edge-core-builder  Dockerfile.sbom  Dockerfile.test  Doxyfile.in  Jenkinsfile  MIGRATION_REPORT.md  Makefile  Makefile.test  README.md  build-mbed-edge.sh  build_and_run_mbed_cloud_tests.sh  build_mbed_edge.sh  cli_template.tmpl  compare_ssl_backends.sh  doxygen_frontpage.md  git_details.cmake  mbed_client_user_config.h  mbed_cloud_client_user_config.h  mbedtls_mbed_client_config.h  run_mbed_edge_tests_working.sh  run_mbed_tests_simple.sh  start.sh  test_sni_support.sh  test_ssl_platform.c  test_ssl_platform.sh  valgrind-unit-tests.supp
common/: CMakeLists.txt  apr_base64.c  default_message_id_generator.c  edge_common.c  edge_time.c  edge_trace.c  integer_length.c  msg_api.c  pt_api_error_codes.c  pt_api_error_parser.c  read_file.c  websocket_comm.c
common/common/: msg_api.h  msg_api_internal.h  pt_api_error_parser.h  read_file.h  websocket_comm.h
common/edge-io-lib/: edge_io_lib.c
common/edge-mutex/: edge_mutex.c
edge-client/: CMakeLists.txt  async_cb_params.cpp  edge_client.cpp  edge_client_byoc.c  edge_client_format_values.c  edge_client_format_values.cpp  edge_core_cb.cpp  eventloop_tracing.c  execute_cb_params.cpp  gateway_resource.cpp  gateway_services_resource.c  gateway_stats.c  msg_api.c  request_context.cpp  reset_factory_settings.c  sda_helper.c  sda_operation.c  subdevice_client.cpp  subdevice_fota.cpp
edge-client/edge-client/: async_cb_params.h  async_cb_params_base.h  edge_client.h  edge_client_byoc.h  edge_client_cpp.h  edge_client_format_values.h  edge_client_impl.h  edge_client_internal.h  edge_client_mgmt.h  edge_core_cb.h  edge_core_cb_result.h  edge_manifest_object.h  eventloop_tracing.h  execute_cb_params.h  execute_cb_params_base.h  gateway_resource.h  gateway_services_resource.h  gateway_stats.h  msg_api.h  request_context.h  reset_factory_settings.h  reset_factory_settings_internal.h  sda_helper.h  sda_operation.h  subdevice_fota.h
edge-core/: CMakeLists.txt  client_type.c  edge_core.docopt  edge_core_clip.h  edge_server.c  edge_server_customer_code.c  gen_docopt.sh  grm_api.c  http_server.c  mgmt_api_internal.c  protocol_api.c  protocol_crypto_api.c  sda_api.c  server.c  srv_comm.c  websocket_serv.c
edge-core/edge-core/: client_type.h  edge_device_object.h  edge_server.h  edge_servicemgmt_object.h  grm_api_internal.h  http_server.h  mgmt_api_internal.h  protocol_api_internal.h  protocol_crypto_api.h  protocol_crypto_api_internal.h  sda_api_internal.h  server.h  srv_comm.h  websocket_serv.h
edge-rpc/: CMakeLists.txt  rpc.c  rpc_timeout_api.c
edge-rpc/edge-rpc/: rpc.h  rpc_timeout_api.h
lib/: CMakeLists.txt  pal_CMakeLists.txt  platform.cmake
lib/jansson/: CMakeLists.txt
lib/jsonrpc/: jsonrpc.c
lib/libevent/: CMakeLists.txt
lib/libwebsockets/: CMakeLists.txt
lib/mbed-cloud-client/: CHANGELOG.md
lib/pal-platform/: pal-platform.json  pal-platform.py
lib/ssl-platform/: CMakeLists.txt  README.md  README_AES_CTR.md  README_CMAC.md  README_X509_CTR_DRBG.md  debug_test.c  example_migration.c  ssl_platform.h  ssl_platform_compat.h  ssl_platform_mbedtls.c  ssl_platform_mbedtls.h  ssl_platform_mpi_ext.c  ssl_platform_mpi_ext.h  ssl_platform_mpi_ext_mbedtls.c  ssl_platform_mpi_ext_openssl.c  ssl_platform_openssl.c  ssl_platform_openssl.h  test_aes_ctr.c  test_asn1_functions.c  test_ccm.c  test_cmac.c  test_cmac.sh  test_cmac_integration.c  test_ecc_mpi.c  test_sni.c  test_x509_functions.c
lorapt-example/: CMakeLists.txt  README.md  lorapt_example.c  lorapt_example_clip.h
nano-stack/: CMakeLists.txt
pt-client/: CMakeLists.txt  client.c  pt_api.c  pt_comm.c  pt_device_object.c  pt_service_api.c
pt-client-2/: CMakeLists.txt  client.c  pt_api.c  pt_certificate_api.c  pt_certificate_parser.c  pt_crypto_api.c  pt_device_object.c  pt_firmware_download_api_internal.c  pt_service_api.c
pt-client-2/pt-client-2/: pt_api_internal.h  pt_certificate_api_internal.h  pt_certificate_parser.h  pt_common_api_internal.h  pt_crypto_api_internal.h  pt_device_api_internal.h  pt_devices_api_internal.h  pt_firmware_download_api_internal.h  pt_object_api_internal.h  pt_object_instance_api_internal.h  pt_resource_api_internal.h  pt_subdev_config.h
pt-client/pt-client/: client.h  pt_api_internal.h
pt-example/: CMakeLists.txt  byte_order.c  client_config.c  client_example.c  client_example_clip.h  ipso_objects.c  ipso_objects.h  read_file.c  read_file.h  thermal_zone.c  thermal_zone.h
pt-example/pt-example/: byte_order.h  client_example.h
test/: CMakeLists.txt  generate_coverage.sh
test/edge-client/: CMakeLists.txt  test_edge_client.cpp  test_edgeclient_format_values.cpp  test_edgeclient_format_values_by_type.cpp  test_edgeclient_mgmt.cpp  test_edgeclient_request_context.cpp  test_edgeclient_scan_values.cpp  test_main.cpp  test_rfs.cpp  test_subdevice_fota.cpp
test/edge-client-mock/: CMakeLists.txt  mock_edge_client.cpp  mock_edge_client_byoc.cpp
test/edge-core/: CMakeLists.txt  server_test.cpp  test_default_message_id_generator.cpp  test_edge_core_mgmt_api.cpp  test_edge_server.cpp  test_http_server.cpp  test_integer_length.cpp  test_main.cpp  test_protocol_api.cpp  test_server.cpp  test_websocket_comm.cpp  test_websocket_serv.cpp
test/edge-io-lib/: CMakeLists.txt  system_if.cpp  test_edge_io_lib.cpp  test_main.cpp
test/edge-rpc/: CMakeLists.txt  test_main.cpp  test_rpc.cpp
test/edge-server-mock/: CMakeLists.txt  edge_server_mock.cpp  test_fota_config.h
test/event-os-mock/: CMakeLists.txt  event_os_mock.cpp
test/kcm-mock/: CMakeLists.txt  kcm_mock.cpp
test/libevent-mock/: CMakeLists.txt  evhttp_mock.cpp  mock_event.cpp
test/libwebsocket-mock/: CMakeLists.txt  mock_lws.cpp  mock_lws_minimal.cpp
test/mbed-cloud-client-mock/: CMakeLists.txt  MbedCloudClient_mock.cpp  arm_uc_mmDerManifestAccessors_mock.cpp  m2mbase_mock.cpp  (+8 more)
(+380 files in other folders)
