file (GLOB APR_SOURCES ./apr_base64.c)
file (GLOB DEFAULT_MSG_ID_GENERATOR_SOURCES ./default_message_id_generator.c)
file (GLOB EDGE_TIME_SOURCES ./edge_time.c)
file (GLOB EDGE_TRACE_SOURCES ./edge_trace.c)
file (GLOB INTEGER_LENGTH_SOURCES ./integer_length.c)
file (GLOB MSG_API_SOURCES ./msg_api.c)
file (GLOB PT_API_ERROR_CODES_SOURCES ./pt_api_error_codes.c)
file (GLOB READ_FILE_SOURCES ./read_file.c)
file (GLOB WEBSOCKET_COMM_SOURCES ./websocket_comm.c)

enable_language(C)
enable_language(CXX)

add_library (edge-apr-base64 ${APR_SOURCES})
add_library (edge-default-message-id-generator ${DEFAULT_MSG_ID_GENERATOR_SOURCES})
add_library (edge-time ${EDGE_TIME_SOURCES})
add_library (edge-trace ${EDGE_TRACE_SOURCES})
add_library (edge-integer-length ${INTEGER_LENGTH_SOURCES})
add_library (edge-msg-api ${MSG_API_SOURCES})
add_library (pt-api-error-codes ${PT_API_ERROR_CODES_SOURCES})
add_library (edge-read-file ${READ_FILE_SOURCES})
add_library (edge-websocket-common ${WEBSOCKET_COMM_SOURCES})

target_link_libraries(edge-default-message-id-generator edge-integer-length)
