enable_language(C)
enable_language(CXX)

if (TARGET_GROUP STREQUAL test)
  add_definitions(-DBUILD_TYPE_TEST)
  add_definitions(-DCPPUTEST_MEM_LEAK_DETECTION_DISABLED)
endif ()

add_subdirectory (edge-core)
add_subdirectory (edge-io-lib)
add_subdirectory (edge-rpc)
add_subdirectory (edge-server-mock)
add_subdirectory (mbed-cloud-client-mock)
add_subdirectory (edge-client)
add_subdirectory (pal-mock)
add_subdirectory (event-os-mock)
add_subdirectory (kcm-mock)
add_subdirectory (libevent-mock)
add_subdirectory (libwebsocket-mock)
add_subdirectory (edge-client-mock)
add_subdirectory (pt-client)
add_subdirectory (pt-client-2)
add_subdirectory (test-lib)

