set (LWS_UNIX_SOCK ON CACHE BOOL "Device Management Edge communicates with domain sockets")
set (LWS_WITH_SSL OFF CACHE BOOL "No SSL needed with domain sockets.")
set (LWS_WITH_LIBEVENT ON CACHE BOOL "Libevent is selected as event loop.")
set (LWS_WITH_SHARED OFF CACHE BOOL "No need for shared libraries, link it in.")
set (LWS_WITH_SSL OFF CACHE BOOL "Disable ssl to help debugging")
set (LWS_WITHOUT_TESTAPPS ON CACHE BOOL "Disable tests from libwebsockets.")
set (LWS_WITHOUT_TEST_SERVER ON CACHE BOOL "Disable tests from libwebsockets.")
set (LWS_WITHOUT_TEST_SERVER_EXT_POLL ON CACHE BOOL "Disable tests from libwebsockets.")
set (LWS_WITHOUT_TEST_PING ON CACHE BOOL "Disable tests from libwebsockets.")
set (LWS_WITHOUT_TEST_ECHO ON CACHE BOOL "Disable tests from libwebsockets.")
set (LWS_WITHOUT_TEST_CLIENT ON CACHE BOOL "Disable tests from libwebsockets.")
set (LWS_WITHOUT_TEST_FRAGGLE ON CACHE BOOL "Disable tests from libwebsockets.")
add_subdirectory(libwebsockets)
